ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  annotations:
    # Add any annotations you need here
spec:
  controller: k8s.io/ingress-nginx
