network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nithu99-network-policy
  namespace: nithu
spec:
  podSelector:
    matchLabels:
      app: nithu99
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: nithu99
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: nithu99
